Projeto/base.core/src/main/java/eapli/base/questionmanagement/lprog/ExamQuestionParser.java
// Generated from C:/Users/Gabriel/Desktop/Escola/Engenharia Informática/2º Ano/2º Semetre/Projeto Integrador/sem4pi-22-23-20/antlr4\ExamQuestion.g4 by ANTLR 4.12.0

package eapli.base.questionmanagement.lprog;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ExamQuestionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TRUE_OR_FALSE=1, CHOSING_OPTION_SELECT_MISSING_WORDS=2, IDENTIFIER=3, 
		SECTION=4, MATCHING=5, MULTIPLE_CHOICE=6, SHORT_ANSWER=7, NUMERICAL=8, 
		SELECT_MISSING_WORDS=9, TRUE_FALSE=10, SCORE=11, SCORE_PER_LINE=12, CORRECT_ANSWER=13, 
		FEEDBACK=14, ERROR_NUMERICAL=15, POSSIBLE_CHOICES_SELECT_MISSING_WORDS=16, 
		NUMS=17, CHAR=18, NUM=19, NEWLINE=20, PUNCTUATION_MARKS=21, DOT=22, DASH=23, 
		SPACE=24, COMMA=25, TWO_DOTS=26, UNDERSCORE=27, RIGHT_PARENTHESES=28, 
		DIVISIVE=29, FLOAT=30, NUMERICAL_OPTION=31, ALPHABETICAL_OPTION=32, MATCHING_OPTION_CORRECTION=33, 
		WORD=34, SPECIAL_CHAR=35, WS=36;
	public static final int
		RULE_examQuestion = 0, RULE_question = 1, RULE_matching = 2, RULE_pair = 3, 
		RULE_matchingOptionCorrection = 4, RULE_multipleChoice = 5, RULE_shortAnswer = 6, 
		RULE_numerical = 7, RULE_selectMissingWords = 8, RULE_uncompleteText = 9, 
		RULE_possibleChoices = 10, RULE_trueFalse = 11, RULE_phrase = 12, RULE_option = 13, 
		RULE_feedback = 14, RULE_words = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"examQuestion", "question", "matching", "pair", "matchingOptionCorrection", 
			"multipleChoice", "shortAnswer", "numerical", "selectMissingWords", "uncompleteText", 
			"possibleChoices", "trueFalse", "phrase", "option", "feedback", "words"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'<option>'", null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "'.'", 
			"'-'", "' '", "','", "':'", "'_'", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TRUE_OR_FALSE", "CHOSING_OPTION_SELECT_MISSING_WORDS", "IDENTIFIER", 
			"SECTION", "MATCHING", "MULTIPLE_CHOICE", "SHORT_ANSWER", "NUMERICAL", 
			"SELECT_MISSING_WORDS", "TRUE_FALSE", "SCORE", "SCORE_PER_LINE", "CORRECT_ANSWER", 
			"FEEDBACK", "ERROR_NUMERICAL", "POSSIBLE_CHOICES_SELECT_MISSING_WORDS", 
			"NUMS", "CHAR", "NUM", "NEWLINE", "PUNCTUATION_MARKS", "DOT", "DASH", 
			"SPACE", "COMMA", "TWO_DOTS", "UNDERSCORE", "RIGHT_PARENTHESES", "DIVISIVE", 
			"FLOAT", "NUMERICAL_OPTION", "ALPHABETICAL_OPTION", "MATCHING_OPTION_CORRECTION", 
			"WORD", "SPECIAL_CHAR", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ExamQuestion.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExamQuestionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExamQuestionContext extends ParserRuleContext {
		public List<QuestionContext> question() {
			return getRuleContexts(QuestionContext.class);
		}
		public QuestionContext question(int i) {
			return getRuleContext(QuestionContext.class,i);
		}
		public ExamQuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_examQuestion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamQuestionListener ) ((ExamQuestionListener)listener).enterExamQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamQuestionListener ) ((ExamQuestionListener)listener).exitExamQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamQuestionVisitor ) return ((ExamQuestionVisitor<? extends T>)visitor).visitExamQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExamQuestionContext examQuestion() throws RecognitionException {
		ExamQuestionContext _localctx = new ExamQuestionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_examQuestion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(32);
				question();
				}
				}
				setState(35); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 2016L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionContext extends ParserRuleContext {
		public MatchingContext matching() {
			return getRuleContext(MatchingContext.class,0);
		}
		public MultipleChoiceContext multipleChoice() {
			return getRuleContext(MultipleChoiceContext.class,0);
		}
		public ShortAnswerContext shortAnswer() {
			return getRuleContext(ShortAnswerContext.class,0);
		}
		public NumericalContext numerical() {
			return getRuleContext(NumericalContext.class,0);
		}
		public SelectMissingWordsContext selectMissingWords() {
			return getRuleContext(SelectMissingWordsContext.class,0);
		}
		public TrueFalseContext trueFalse() {
			return getRuleContext(TrueFalseContext.class,0);
		}
		public QuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamQuestionListener ) ((ExamQuestionListener)listener).enterQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamQuestionListener ) ((ExamQuestionListener)listener).exitQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamQuestionVisitor ) return ((ExamQuestionVisitor<? extends T>)visitor).visitQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionContext question() throws RecognitionException {
		QuestionContext _localctx = new QuestionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_question);
		try {
			setState(43);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MATCHING:
				enterOuterAlt(_localctx, 1);
				{
				setState(37);
				matching();
				}
				break;
			case MULTIPLE_CHOICE:
				enterOuterAlt(_localctx, 2);
				{
				setState(38);
				multipleChoice();
				}
				break;
			case SHORT_ANSWER:
				enterOuterAlt(_localctx, 3);
				{
				setState(39);
				shortAnswer();
				}
				break;
			case NUMERICAL:
				enterOuterAlt(_localctx, 4);
				{
				setState(40);
				numerical();
				}
				break;
			case SELECT_MISSING_WORDS:
				enterOuterAlt(_localctx, 5);
				{
				setState(41);
				selectMissingWords();
				}
				break;
			case TRUE_FALSE:
				enterOuterAlt(_localctx, 6);
				{
				setState(42);
				trueFalse();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatchingContext extends ParserRuleContext {
		public TerminalNode MATCHING() { return getToken(ExamQuestionParser.MATCHING, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(ExamQuestionParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ExamQuestionParser.NEWLINE, i);
		}
		public PhraseContext phrase() {
			return getRuleContext(PhraseContext.class,0);
		}
		public List<PairContext> pair() {
			return getRuleContexts(PairContext.class);
		}
		public PairContext pair(int i) {
			return getRuleContext(PairContext.class,i);
		}
		public TerminalNode SCORE_PER_LINE() { return getToken(ExamQuestionParser.SCORE_PER_LINE, 0); }
		public TerminalNode FLOAT() { return getToken(ExamQuestionParser.FLOAT, 0); }
		public TerminalNode CORRECT_ANSWER() { return getToken(ExamQuestionParser.CORRECT_ANSWER, 0); }
		public List<MatchingOptionCorrectionContext> matchingOptionCorrection() {
			return getRuleContexts(MatchingOptionCorrectionContext.class);
		}
		public MatchingOptionCorrectionContext matchingOptionCorrection(int i) {
			return getRuleContext(MatchingOptionCorrectionContext.class,i);
		}
		public FeedbackContext feedback() {
			return getRuleContext(FeedbackContext.class,0);
		}
		public MatchingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matching; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamQuestionListener ) ((ExamQuestionListener)listener).enterMatching(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamQuestionListener ) ((ExamQuestionListener)listener).exitMatching(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamQuestionVisitor ) return ((ExamQuestionVisitor<? extends T>)visitor).visitMatching(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchingContext matching() throws RecognitionException {
		MatchingContext _localctx = new MatchingContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_matching);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			match(MATCHING);
			setState(46);
			match(NEWLINE);
			setState(47);
			phrase();
			setState(48);
			match(NEWLINE);
			setState(49);
			pair();
			setState(51); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(50);
				pair();
				}
				}
				setState(53); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NUMERICAL_OPTION );
			setState(55);
			match(SCORE_PER_LINE);
			setState(56);
			match(FLOAT);
			setState(57);
			match(NEWLINE);
			setState(58);
			match(CORRECT_ANSWER);
			setState(60); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(59);
				matchingOptionCorrection();
				}
				}
				setState(62); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NUMERICAL_OPTION );
			setState(64);
			match(NEWLINE);
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FEEDBACK) {
				{
				setState(65);
				feedback();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PairContext extends ParserRuleContext {
		public TerminalNode NUMERICAL_OPTION() { return getToken(ExamQuestionParser.NUMERICAL_OPTION, 0); }
		public List<PhraseContext> phrase() {
			return getRuleContexts(PhraseContext.class);
		}
		public PhraseContext phrase(int i) {
			return getRuleContext(PhraseContext.class,i);
		}
		public TerminalNode DIVISIVE() { return getToken(ExamQuestionParser.DIVISIVE, 0); }
		public TerminalNode ALPHABETICAL_OPTION() { return getToken(ExamQuestionParser.ALPHABETICAL_OPTION, 0); }
		public TerminalNode NEWLINE() { return getToken(ExamQuestionParser.NEWLINE, 0); }
		public PairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pair; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamQuestionListener ) ((ExamQuestionListener)listener).enterPair(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamQuestionListener ) ((ExamQuestionListener)listener).exitPair(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamQuestionVisitor ) return ((ExamQuestionVisitor<? extends T>)visitor).visitPair(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PairContext pair() throws RecognitionException {
		PairContext _localctx = new PairContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pair);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(NUMERICAL_OPTION);
			setState(69);
			phrase();
			setState(70);
			match(DIVISIVE);
			setState(71);
			match(ALPHABETICAL_OPTION);
			setState(72);
			phrase();
			setState(73);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatchingOptionCorrectionContext extends ParserRuleContext {
		public TerminalNode NUMERICAL_OPTION() { return getToken(ExamQuestionParser.NUMERICAL_OPTION, 0); }
		public TerminalNode DASH() { return getToken(ExamQuestionParser.DASH, 0); }
		public TerminalNode ALPHABETICAL_OPTION() { return getToken(ExamQuestionParser.ALPHABETICAL_OPTION, 0); }
		public MatchingOptionCorrectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchingOptionCorrection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamQuestionListener ) ((ExamQuestionListener)listener).enterMatchingOptionCorrection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamQuestionListener ) ((ExamQuestionListener)listener).exitMatchingOptionCorrection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamQuestionVisitor ) return ((ExamQuestionVisitor<? extends T>)visitor).visitMatchingOptionCorrection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchingOptionCorrectionContext matchingOptionCorrection() throws RecognitionException {
		MatchingOptionCorrectionContext _localctx = new MatchingOptionCorrectionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_matchingOptionCorrection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(NUMERICAL_OPTION);
			setState(76);
			match(DASH);
			setState(77);
			match(ALPHABETICAL_OPTION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MultipleChoiceContext extends ParserRuleContext {
		public TerminalNode MULTIPLE_CHOICE() { return getToken(ExamQuestionParser.MULTIPLE_CHOICE, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(ExamQuestionParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ExamQuestionParser.NEWLINE, i);
		}
		public PhraseContext phrase() {
			return getRuleContext(PhraseContext.class,0);
		}
		public TerminalNode SCORE() { return getToken(ExamQuestionParser.SCORE, 0); }
		public TerminalNode FLOAT() { return getToken(ExamQuestionParser.FLOAT, 0); }
		public TerminalNode CORRECT_ANSWER() { return getToken(ExamQuestionParser.CORRECT_ANSWER, 0); }
		public TerminalNode CHAR() { return getToken(ExamQuestionParser.CHAR, 0); }
		public List<OptionContext> option() {
			return getRuleContexts(OptionContext.class);
		}
		public OptionContext option(int i) {
			return getRuleContext(OptionContext.class,i);
		}
		public FeedbackContext feedback() {
			return getRuleContext(FeedbackContext.class,0);
		}
		public MultipleChoiceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multipleChoice; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamQuestionListener ) ((ExamQuestionListener)listener).enterMultipleChoice(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamQuestionListener ) ((ExamQuestionListener)listener).exitMultipleChoice(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamQuestionVisitor ) return ((ExamQuestionVisitor<? extends T>)visitor).visitMultipleChoice(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultipleChoiceContext multipleChoice() throws RecognitionException {
		MultipleChoiceContext _localctx = new MultipleChoiceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_multipleChoice);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(MULTIPLE_CHOICE);
			setState(80);
			match(NEWLINE);
			setState(81);
			phrase();
			setState(82);
			match(NEWLINE);
			setState(84); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(83);
				option();
				}
				}
				setState(86); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ALPHABETICAL_OPTION );
			setState(88);
			match(SCORE);
			setState(89);
			match(FLOAT);
			setState(90);
			match(NEWLINE);
			setState(91);
			match(CORRECT_ANSWER);
			setState(92);
			match(CHAR);
			setState(93);
			match(NEWLINE);
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FEEDBACK) {
				{
				setState(94);
				feedback();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ShortAnswerContext extends ParserRuleContext {
		public TerminalNode SHORT_ANSWER() { return getToken(ExamQuestionParser.SHORT_ANSWER, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(ExamQuestionParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ExamQuestionParser.NEWLINE, i);
		}
		public List<PhraseContext> phrase() {
			return getRuleContexts(PhraseContext.class);
		}
		public PhraseContext phrase(int i) {
			return getRuleContext(PhraseContext.class,i);
		}
		public TerminalNode SCORE() { return getToken(ExamQuestionParser.SCORE, 0); }
		public TerminalNode FLOAT() { return getToken(ExamQuestionParser.FLOAT, 0); }
		public TerminalNode CORRECT_ANSWER() { return getToken(ExamQuestionParser.CORRECT_ANSWER, 0); }
		public FeedbackContext feedback() {
			return getRuleContext(FeedbackContext.class,0);
		}
		public ShortAnswerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shortAnswer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamQuestionListener ) ((ExamQuestionListener)listener).enterShortAnswer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamQuestionListener ) ((ExamQuestionListener)listener).exitShortAnswer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamQuestionVisitor ) return ((ExamQuestionVisitor<? extends T>)visitor).visitShortAnswer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShortAnswerContext shortAnswer() throws RecognitionException {
		ShortAnswerContext _localctx = new ShortAnswerContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_shortAnswer);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(SHORT_ANSWER);
			setState(98);
			match(NEWLINE);
			setState(99);
			phrase();
			setState(100);
			match(NEWLINE);
			setState(101);
			match(SCORE);
			setState(102);
			match(FLOAT);
			setState(103);
			match(NEWLINE);
			setState(104);
			match(CORRECT_ANSWER);
			setState(105);
			phrase();
			setState(106);
			match(NEWLINE);
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FEEDBACK) {
				{
				setState(107);
				feedback();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NumericalContext extends ParserRuleContext {
		public TerminalNode NUMERICAL() { return getToken(ExamQuestionParser.NUMERICAL, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(ExamQuestionParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ExamQuestionParser.NEWLINE, i);
		}
		public PhraseContext phrase() {
			return getRuleContext(PhraseContext.class,0);
		}
		public TerminalNode SCORE() { return getToken(ExamQuestionParser.SCORE, 0); }
		public List<TerminalNode> FLOAT() { return getTokens(ExamQuestionParser.FLOAT); }
		public TerminalNode FLOAT(int i) {
			return getToken(ExamQuestionParser.FLOAT, i);
		}
		public TerminalNode CORRECT_ANSWER() { return getToken(ExamQuestionParser.CORRECT_ANSWER, 0); }
		public TerminalNode ERROR_NUMERICAL() { return getToken(ExamQuestionParser.ERROR_NUMERICAL, 0); }
		public FeedbackContext feedback() {
			return getRuleContext(FeedbackContext.class,0);
		}
		public NumericalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numerical; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamQuestionListener ) ((ExamQuestionListener)listener).enterNumerical(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamQuestionListener ) ((ExamQuestionListener)listener).exitNumerical(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamQuestionVisitor ) return ((ExamQuestionVisitor<? extends T>)visitor).visitNumerical(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumericalContext numerical() throws RecognitionException {
		NumericalContext _localctx = new NumericalContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_numerical);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(NUMERICAL);
			setState(111);
			match(NEWLINE);
			setState(112);
			phrase();
			setState(113);
			match(NEWLINE);
			setState(114);
			match(SCORE);
			setState(115);
			match(FLOAT);
			setState(116);
			match(NEWLINE);
			setState(117);
			match(CORRECT_ANSWER);
			setState(118);
			match(FLOAT);
			setState(119);
			match(NEWLINE);
			setState(120);
			match(ERROR_NUMERICAL);
			setState(121);
			match(FLOAT);
			setState(122);
			match(NEWLINE);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FEEDBACK) {
				{
				setState(123);
				feedback();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectMissingWordsContext extends ParserRuleContext {
		public TerminalNode SELECT_MISSING_WORDS() { return getToken(ExamQuestionParser.SELECT_MISSING_WORDS, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(ExamQuestionParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ExamQuestionParser.NEWLINE, i);
		}
		public UncompleteTextContext uncompleteText() {
			return getRuleContext(UncompleteTextContext.class,0);
		}
		public TerminalNode POSSIBLE_CHOICES_SELECT_MISSING_WORDS() { return getToken(ExamQuestionParser.POSSIBLE_CHOICES_SELECT_MISSING_WORDS, 0); }
		public TerminalNode SCORE() { return getToken(ExamQuestionParser.SCORE, 0); }
		public TerminalNode FLOAT() { return getToken(ExamQuestionParser.FLOAT, 0); }
		public TerminalNode CORRECT_ANSWER() { return getToken(ExamQuestionParser.CORRECT_ANSWER, 0); }
		public PhraseContext phrase() {
			return getRuleContext(PhraseContext.class,0);
		}
		public List<PossibleChoicesContext> possibleChoices() {
			return getRuleContexts(PossibleChoicesContext.class);
		}
		public PossibleChoicesContext possibleChoices(int i) {
			return getRuleContext(PossibleChoicesContext.class,i);
		}
		public FeedbackContext feedback() {
			return getRuleContext(FeedbackContext.class,0);
		}
		public SelectMissingWordsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectMissingWords; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamQuestionListener ) ((ExamQuestionListener)listener).enterSelectMissingWords(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamQuestionListener ) ((ExamQuestionListener)listener).exitSelectMissingWords(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamQuestionVisitor ) return ((ExamQuestionVisitor<? extends T>)visitor).visitSelectMissingWords(this);
			else return visitor.visitChildren(this);
		}
	}
